# OmniFlow-AI

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: backend.yml  frontend.yml
alembic/: env.py
alembic/versions/: 20260618_0001_create_core_persistence_tables.py  20260618_0002_create_evaluation_reports.py  20260623_0003_create_publish_drafts.py
apps/api/app/: __init__.py  main.py
apps/api/app/adapters/: __init__.py  base.py  bilibili_adapter.py  douyin_adapter.py  registry.py  types.py  wechat_adapter.py  xiaohongshu_adapter.py  zhihu_adapter.py
apps/api/app/agents/: __init__.py  runner.py  state.py  workflow.py
apps/api/app/api/: __init__.py  health.py  projects.py  runs.py
apps/api/app/core/: config.py  database.py
apps/api/app/evaluators/: __init__.py  rule_based.py
apps/api/app/llm/: __init__.py  base.py  deepseek_provider.py  mock_provider.py  schemas.py  service.py
apps/api/app/models/: __init__.py  project.py  trace.py
apps/api/app/schemas/: common.py  (+3 more)
apps/api/tests/: __init__.py  conftest.py  test_adapters.py  test_agent_workflow.py  test_health.py  test_llm_providers.py  test_mock_adapters.py  test_projects_api.py  test_trace_service.py  test_trace_workflow.py
apps/web/: package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: ContentEditor.tsx  HealthStatus.tsx  PlatformSelector.tsx  PreviewCard.tsx  TraceViewer.tsx
apps/web/hooks/: useHealth.ts
apps/web/lib/: api.ts  publishHandoff.test.ts  publishHandoff.ts  publishLinks.ts
apps/web/types/: index.ts
docs/: agent-workflow.md  api-design.md  architecture.md  database-design.md  deployment.md  evaluation.md  pr-workflow.md  product-requirements.md  real-use-workflow.md  release-checklist.md  week-three-demo-script.md
scripts/: dev.sh  format.sh  lint.sh  test.sh
(+15 files in other folders)
