[project]
name = "contentops-agent"
version = "0.1.0"
description = "Enterprise AI Agent platform for multi-platform content operations."
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B904",  # raise-without-from-inside-except (allow when intentional)
    "UP017",  # datetime.UTC alias — Python 3.12+ but mypy stubs lag
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
mypy_path = "apps"
explicit_package_bases = true
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "api.tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["apps/api/tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
pythonpath = ["apps"]

[tool.setuptools.packages.find]
where = ["apps"]
include = ["api*"]
namespaces = false

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
